--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,6 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 # mysql8.0以上要加时区
 jdbc.url=jdbc:mysql://localhost:3306/mybatis?serverTimezone=UTC&characterEncoding=UTF-8&useUnicode=true
+#jdbc.url=jdbc:mysql://localhost:3306/mybatis?characterEncoding=UTF-8&useUnicode=true
 jdbc.username=root
 jdbc.password=root
